🚀 优化项目架构和功能
✨ 新增特性:
- 并行观看任务，提升执行效率
- 详细的任务通知日志系统
- 可配置的并行度控制

🗑️ 移除功能:
- 删除弹幕发送功能
- 移除自动更新检查
- 清理无用文件和依赖

📝 文档优化:
- 重写README.md，结构更清晰
- 完善requirements.txt注释
- 更新功能说明和使用指南

🔧 项目优化:
- 代码结构重构
- 异常处理增强
- 配置参数优化

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+# B站粉丝牌助手依赖包
+# 核心 HTTP 客户端
 aiohttp>=3.8.0
 aiohttp-socks>=0.8.0
+
+# 日志系统
 loguru>=0.7.0
+
+# 配置文件解析
 PyYAML>=6.0
+
+# 任务调度
 APScheduler>=3.10.0
+
+# 时区处理
 pytz>=2023.3
