--- a/users.example.yaml
+++ b/users.example.yaml
@@ -5,7 +5,7 @@ USERS:
         - 1945855008  # 良人
         - 3493081957534067  # 弥绘貘貘
         - 3546928038022021  # 钻宝
-        # 白名单用户UID, 为直播间主播对应的UID（不是直播间房间号！！！）, 以逗号分隔, 填写后只会对这些直播间执行任务（点赞、发弹幕、观看）, 黑名单失效, 不用就留为空白
+        # 白名单用户UID, 为直播间主播对应的UID（不是直播间房间号！！！）, 以逗号分隔, 填写后只会对这些直播间执行任务（点赞、观看）, 黑名单失效, 不用就留为空白
         # 对于粉丝牌较多 或者 希望按一定优先顺序执行任务的用户, 建议使用白名单。使用白名单时，在同等优先级下，建议将轮播直播间放在靠前位置。
         # "-" 后必须有空格！"-"需相比上一行缩进两个空格！
       banned_uid:  # 黑名单UID 格式同白名单, 填了后将不会打对这些直播间执行任务, 用英文逗号分隔。不填则不限制,两个都不填则对该用户有粉丝牌的所有直播间执行任务
@@ -32,10 +32,14 @@ PROXY: # 推送代理地址,如：http://1.2.3.4:5678 支持 http/socks4/socks5 
 
 LIKE_CD: 0.3 # 点赞间隔时间,单位秒,默认（留空不填）0.3秒,设置为0则不点赞
 
-DANMAKU_CD: 3 # 弹幕间隔时间,单位秒,默认3秒,设置为0则不发弹幕
+# DANMAKU_CD: 3 # 弹幕间隔时间,单位秒,默认3秒,设置为0则不发弹幕（已移除弹幕功能）
 
 WATCH_TARGET: 25 # 每直播间满亲密度所需有效观看时长,单位 min ,设置为0则不进行观看, 默认 25 分钟
 
 WATCH_MAX_ATTEMPTS: 50 # 单次执行,每直播间允许的最多尝试观看的时长,单位 min ,数值不能小于WATCH_TARGET,默认 50 分钟
 
-WEARMEDAL: 0 # 是否弹幕打卡时自动带上当前房间的粉丝牌,避免房间有粉丝牌等级禁言,默认关闭,设置为1则开启
+MAX_CONCURRENT_WATCH: 3 # 最大并行观看任务数,同时观看的直播间数量,默认3个,设置为1则恢复串行模式
+
+NOTIFY_DETAIL: 1 # 是否发送详细通知,1为发送详细日志,0为仅发送错误信息,默认1
+
+WEARMEDAL: 0 # 是否点赞打卡时自动带上当前房间的粉丝牌,避免房间有粉丝牌等级禁言,默认关闭,设置为1则开启
