feat: 添加API限流优化机制，降低B站限流风险
- 实现智能延迟机制（随机化间隔）
- 添加API并发控制和全局速率限制
- 实现指数退避重试策略
- 优化观看任务心跳频率
- 新增可配置的限流参数
- 添加详细使用说明文档

--- a/users.example.yaml
+++ b/users.example.yaml
@@ -30,7 +30,7 @@ MOREPUSH: # 更多种类的推送 详细配置见文档
 PROXY: # 推送代理地址,如：http://1.2.3.4:5678 支持 http/socks4/socks5 不支持 https 不用代理的不用填
 #########以下为自定义配置#########
 
-LIKE_CD: 0.3 # 点赞间隔时间,单位秒,默认（留空不填）0.3秒,设置为0则不点赞
+LIKE_CD: 0.5 # 点赞间隔时间,单位秒,默认0.5秒(已增加随机延迟),设置为0则不点赞
 
 # DANMAKU_CD: 3 # 弹幕间隔时间,单位秒,默认3秒,设置为0则不发弹幕（已移除弹幕功能）
 
@@ -38,7 +38,11 @@ WATCH_TARGET: 25 # 每直播间满亲密度所需有效观看时长,单位 min ,
 
 WATCH_MAX_ATTEMPTS: 50 # 单次执行,每直播间允许的最多尝试观看的时长,单位 min ,数值不能小于WATCH_TARGET,默认 50 分钟
 
-MAX_CONCURRENT_WATCH: 3 # 最大并行观看任务数,同时观看的直播间数量,默认3个,设置为1则恢复串行模式
+MAX_CONCURRENT_WATCH: 2 # 最大并行观看任务数,同时观看的直播间数量,默认2个(降低并发),设置为1则恢复串行模式
+
+# API限流配置
+API_RATE_LIMIT: 0.5 # API调用最小间隔时间,单位秒,默认0.5秒
+MAX_API_CONCURRENT: 3 # 最大并发API调用数,默认3个
 
 NOTIFY_DETAIL: 1 # 是否发送详细通知,1为发送详细日志,0为仅发送错误信息,默认1
 
