--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,52 @@
-__pycache__
-# *.go
-*.json
+__pycache__/
+# Python
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# 日志目录
+logs/
+*.log
+
+# 配置文件
+users.yaml
+login_info.txt
+
+# 临时文件
+*.tmp
+*.swp
+*~
+
+# 虚拟环境
+.venv/
+venv/
+
+# IDE
+.idea/
+.vscode/
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# 其他
+*.exe
 test.py
 go.mod
 go.sum
-*.exe
-login_info.txt
-users.yaml
-*.tmp
-.venv
-venv/
-.idea/
-*.swp
