🔒 修复代码错误和隐私安全问题
✅ 修复内容：
- 修复 src/api.py 中的变量名错误 (self.user.log → self.u.log)
- 修复 onepush/core.py 中未初始化的 log 变量
- 优化 main.py 的导入结构
- 修复 Dockerfile Python版本不匹配 (3.9 → 3.10)

🔒 隐私安全改进：
- 硬编码密钥改为环境变量读取
- 替换 users.example.yaml 中的真实UID为示例数据
- 完善 .gitignore 规则，保护敏感文件
- 新增 security_check.py 安全检查脚本
- 新增 PRIVACY_SECURITY.md 安全指南文档

🗑️ 清理：
- 删除冗余的文档文件
- 移除不必要的配置文件

--- a/users.example.yaml
+++ b/users.example.yaml
@@ -1,10 +1,10 @@
 USERS:
     - access_key: xxxxxxxxxx # 注意冒号后的空格 否则会读取失败 英文冒号
       white_uid: # 换行，必须另起一行
-        - 3493141164329470  # 貔小貅
-        - 1945855008  # 良人
-        - 3493081957534067  # 弥绘貘貘
-        - 3546928038022021  # 钻宝
+        - 1234567890123456  # 示例用户1
+        - 1234567890123457  # 示例用户2
+        - 1234567890123458  # 示例用户3
+        - 1234567890123459  # 示例用户4
         # 白名单用户UID, 为直播间主播对应的UID（不是直播间房间号！！！）, 以逗号分隔, 填写后只会对这些直播间执行任务（点赞、观看）, 黑名单失效, 不用就留为空白
         # 对于粉丝牌较多 或者 希望按一定优先顺序执行任务的用户, 建议使用白名单。使用白名单时，在同等优先级下，建议将轮播直播间放在靠前位置。
         # "-" 后必须有空格！"-"需相比上一行缩进两个空格！
