--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-__pycache__/
 # Python
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
@@ -20,33 +20,55 @@ wheels/
 .installed.cfg
 *.egg
 
-# 日志目录
+# 日志目录 (包含access_key和用户行为数据)
 logs/
 *.log
+task_log_*.json
 
-# 配置文件
+# 配置文件 (包含敏感信息)
 users.yaml
+*.yaml.bak
+*.yml.bak
 login_info.txt
+.env
+.env.local
+.env.production
 
 # 临时文件
 *.tmp
 *.swp
 *~
+*.bak
 
 # 虚拟环境
 .venv/
 venv/
+env/
 
 # IDE
 .idea/
 .vscode/
+*.sublime-*
 
 # 系统文件
 .DS_Store
 Thumbs.db
+desktop.ini
 
-# 其他
-*.exe
+# 其他敏感文件
+*.key
+*.pem
+*.crt
+config.py
+secrets.txt
+credentials.txt
+
+# 测试文件
 test.py
 go.mod
 go.sum
+
+# 备份文件
+*.old
+*.orig
+*.backup
