--- a/users.example.yaml
+++ b/users.example.yaml
@@ -32,11 +32,11 @@ LIKE_CD: 0.5 # 点赞间隔时间,单位秒,默认0.5秒(已增加随机延迟),
 # DANMAKU_CD: 3 # 弹幕间隔时间,单位秒,默认3秒,设置为0则不发弹幕（已移除弹幕功能）
 # 新规调整：弹幕每日可获得1航海亲密度，上限5亲密度（功能已移除）
 
-WATCH_TARGET: 5 # 每直播间满亲密度所需有效观看时长,单位 min ,设置为0则不进行观看
+WATCH_TARGET: 5 # 每直播间满亲密度所需有效观看次数,单位 次（每次5分钟）,设置为0则不进行观看
 # 新规调整：每观看5分钟获得6亲密度，每日上限30亲密度（5次×6=30）
-# 因此只需要观看25分钟即可获得满30亲密度
+# 因此只需要观看5次（25分钟）即可获得满30亲密度
 
-WATCH_MAX_ATTEMPTS: 10 # 单次执行,每直播间允许的最多尝试观看的时长,单位 min ,数值不能小于WATCH_TARGET
+WATCH_MAX_ATTEMPTS: 10 # 单次执行,每直播间允许的最多尝试观看次数,单位 次（每次5分钟）,数值不能小于WATCH_TARGET
 # 新规调整：由于只需要5次×5分钟=25分钟，大幅减少尝试次数
 
 # MAX_CONCURRENT_WATCH: 6 # 已移除并行观看功能，使用串行观看确保任务完成
