--- a/users.example.yaml
+++ b/users.example.yaml
@@ -1,54 +1,36 @@
 USERS:
-    - access_key: xxxxxxxxxx # 注意冒号后的空格 否则会读取失败 英文冒号
-      white_uid: # 换行，必须另起一行
+    - access_key: xxxxxxxxxx # 必须使用英文冒号和空格
+      white_uid: # 白名单：仅对这些直播间执行任务
         - 3493141164329470  # 貔小貅
         - 1945855008  # 良人
         - 3493081957534067  # 弥绘貘貘
         - 3546928038022021  # 钻宝
-        # 白名单用户UID, 为直播间主播对应的UID（不是直播间房间号！！！）, 以逗号分隔, 填写后只会对这些直播间执行任务（点赞、观看）, 黑名单失效, 不用就留为空白
-        # 对于粉丝牌较多 或者 希望按一定优先顺序执行任务的用户, 建议使用白名单。使用白名单时，在同等优先级下，建议将轮播直播间放在靠前位置。
-        # "-" 后必须有空格！"-"需相比上一行缩进两个空格！
-      banned_uid:  # 黑名单UID 格式同白名单, 填了后将不会打对这些直播间执行任务, 用英文逗号分隔。不填则不限制,两个都不填则对该用户有粉丝牌的所有直播间执行任务
+        # 填写主播UID（非房间号），留空则执行所有有粉丝牌的直播间
+        # 格式：- UID（注意横线后空格和缩进）
+      banned_uid:  # 黑名单：不执行这些直播间的任务
     - access_key:
       white_uid: 
       banned_uid: 
-    # 注意对齐，必须使用空格对齐，不要用tab等其他占位符对齐！会报错！
-    # 多用户以上格式添加
-    # 使用文本编辑器编辑时可能有显示问题,如遇报错请关闭此文件重新打开,检查格式
-    # 井号后为注释 井号前后必须有空格！井号前后必须有空格！井号前后必须有空格！
-    # 冒号后面也要有空格！冒号后面也要有空格！冒号后面也要有空格！
-    # 英文冒号, 英文冒号！英文逗号, 英文逗号！
+    # 多用户按以上格式添加，注意使用空格缩进而非Tab
+    # YAML格式要求：冒号后空格、注释前后空格、英文标点
 
 
-SENDKEY: # Server酱微信推送 可选 获取地址：https://sct.ftqq.com/
-MOREPUSH: # 更多种类的推送 详细配置见文档
+SENDKEY: # Server酱微信推送（可选），获取地址：https://sct.ftqq.com/
+MOREPUSH: # 更多推送方式，详见文档
 
-PROXY: # 推送代理地址,如：http://1.2.3.4:5678 支持 http/socks4/socks5 不支持 https 不用代理的不用填
+PROXY: # 代理地址（可选），支持http/socks4/socks5，如：http://1.2.3.4:5678
 #########以下为自定义配置#########
 
-LIKE_CD: 0.5 # 点赞间隔时间,单位秒,默认0.5秒(已增加随机延迟),设置为0则不点赞
-# 新规调整：点赞每日可获得1航海亲密度，上限5亲密度
+LIKE_CD: 0.5 # 点赞间隔(秒)，0=不点赞。
 
-# DANMAKU_CD: 3 # 弹幕间隔时间,单位秒,默认3秒,设置为0则不发弹幕（已移除弹幕功能）
-# 新规调整：弹幕每日可获得1航海亲密度，上限5亲密度（功能已移除）
+WATCH_TARGET: 5 # 观看次数（一次五分钟），0=不观看。
 
-WATCH_TARGET: 5 # 每直播间满亲密度所需有效观看次数,单位 次（每次5分钟）,设置为0则不进行观看
-# 新规调整：每观看5分钟获得6亲密度，每日上限30亲密度（5次×6=30）
-# 因此只需要观看5次（25分钟）即可获得满30亲密度
-
-WATCH_MAX_ATTEMPTS: 10 # 单次执行,每直播间允许的最多尝试观看次数,单位 次（每次5分钟）,数值不能小于WATCH_TARGET
-# 新规调整：由于只需要5次×5分钟=25分钟，大幅减少尝试次数
-
-# MAX_CONCURRENT_WATCH: 6 # 已移除并行观看功能，使用串行观看确保任务完成
+WATCH_MAX_ATTEMPTS: 10 # 每直播间最大尝试观看次数
 
 # API限流配置
-API_RATE_LIMIT: 0.5 # API调用最小间隔时间,单位秒,默认0.5秒
-MAX_API_CONCURRENT: 3 # 最大并发API调用数,默认3个
+API_RATE_LIMIT: 0.5 # API调用间隔(秒)
+MAX_API_CONCURRENT: 3 # 最大并发API调用数
 
-# 新增配置参数说明
-# WEARMEDAL: 0 # 是否点赞打卡时自动带上当前房间的粉丝牌，0关闭，1开启，默认关闭
-# NOTIFY_DETAIL: 1 # 是否发送详细通知，0仅错误信息，1详细日志，默认1
+NOTIFY_DETAIL: 1 # 通知详细度：1=详细日志，0=仅错误信息
 
-NOTIFY_DETAIL: 1 # 是否发送详细通知,1为发送详细日志,0为仅发送错误信息,默认1
-
-WEARMEDAL: 0 # 是否点赞打卡时自动带上当前房间的粉丝牌,避免房间有粉丝牌等级禁言,默认关闭,设置为1则开启
+WEARMEDAL: 0 # 点赞时自动戴粉丝牌，1=开启
